// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/profile > (locale: en) > renders alert when user is not registered yet 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-warning text-inverted mt-2"><span class="iconify i-lucide:user shrink-0 size-5" aria-hidden="true" data-slot="icon"></span>
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">New Registration</div>
    <div data-slot="description" class="text-sm opacity-90 mt-1">To use this app, you need to register additional user information. Please fill out the required fields in the form below.</div>
    <!--v-if-->
  </div>
  <div data-slot="actions" class="flex flex-wrap gap-1.5 shrink-0 items-center">
    <!--v-if--><button type="button" data-slot="close" aria-label="Close" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted outline-inverted/25 focus-visible:outline-3 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
</div>"
`;

exports[`/profile > (locale: en) > renders correctly when user is already registered 1`] = `
"<div data-slot="root" class="flex flex-col lg:grid lg:grid-cols-10 lg:gap-10">
  <!--v-if-->
  <div data-slot="center" class="lg:col-span-10">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8">
      <!--v-if-->
      <div data-slot="root" class="rounded-lg overflow-hidden bg-default ring ring-default divide-y divide-default mt-4">
        <!--v-if-->
        <div data-slot="body" class="p-4 sm:p-6">
          <form id="v-0-0-0" method="post" class="" role="form">
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4" disabled="true">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-1" data-slot="label" class="block font-medium text-default after:content-['*'] after:ms-0.5 after:text-error">User ID</label>
                  <!--v-if-->
                </div>
                <p id="v-0-0-1-description" data-slot="description" class="text-muted">The user ID used in this app. Once registered, it cannot be changed.</p>
              </div>
              <div class="relative mt-1">
                <div data-slot="root" class="relative inline-flex items-center w-full"><input id="v-0-0-1" type="text" name="id" placeholder="3-32 characters, alphanumeric, underscores, and hyphens only" class="w-full rounded-md border-0 appearance-none placeholder:text-dimmed disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 text-highlighted bg-default ring ring-inset ring-accented outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary md:text-sm" disabled="" autocomplete="off" aria-invalid="false" aria-describedby="v-0-0-1-description" data-slot="base" value="public_user">
                  <!--v-if-->
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
            </div>
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-2" data-slot="label" class="block font-medium text-default after:content-['*'] after:ms-0.5 after:text-error">User Name</label>
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
              <div class="relative mt-1">
                <div data-slot="root" class="relative inline-flex items-center w-full"><input id="v-0-0-2" type="text" name="name" placeholder="1-32 characters" class="w-full rounded-md border-0 appearance-none placeholder:text-dimmed disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 text-highlighted bg-default ring ring-inset ring-accented outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary md:text-sm" autocomplete="off" aria-invalid="false" data-slot="base" value="Public User">
                  <!--v-if-->
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
            </div>
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-3" data-slot="label" class="block font-medium text-default after:content-['*'] after:ms-0.5 after:text-error">Area</label>
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
              <div class="relative mt-1"><button id="v-0-0-3" data-slot="base" class="relative group rounded-md inline-flex items-center disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-highlighted bg-default ring ring-inset ring-accented hover:bg-elevated disabled:bg-default outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary pe-9 md:text-sm w-full" aria-invalid="false" role="combobox" type="button" aria-controls="reka-select-content-v-0-0-4" aria-expanded="false" aria-required="false" aria-autocomplete="none" dir="ltr" data-state="closed">
                  <!--v-if--><span style="pointer-events: none;" data-slot="value" class="truncate pointer-events-none">Tokyo (Japan)</span><span data-slot="trailing" class="absolute inset-y-0 end-0 flex items-center pe-2.5"><span class="iconify i-lucide:chevron-down shrink-0 text-dimmed size-5" aria-hidden="true" data-slot="trailingIcon"></span></span>
                </button>
                <!--teleport start-->
                <!--teleport end--><select aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" name="area" value="13">
                  <!--v-if-->
                  <option value="0">Undefined</option>
                  <option value="1">Hokkaido (Japan)</option>
                  <option value="2">Aomori (Japan)</option>
                  <option value="3">Iwate (Japan)</option>
                  <option value="4">Miyagi (Japan)</option>
                  <option value="5">Akita (Japan)</option>
                  <option value="6">Yamagata (Japan)</option>
                  <option value="7">Fukushima (Japan)</option>
                  <option value="8">Ibaraki (Japan)</option>
                  <option value="9">Tochigi (Japan)</option>
                  <option value="10">Gunma (Japan)</option>
                  <option value="11">Saitama (Japan)</option>
                  <option value="12">Chiba (Japan)</option>
                  <option value="13">Tokyo (Japan)</option>
                  <option value="14">Kanagawa (Japan)</option>
                  <option value="15">Niigata (Japan)</option>
                  <option value="16">Toyama (Japan)</option>
                  <option value="17">Ishikawa (Japan)</option>
                  <option value="18">Fukui (Japan)</option>
                  <option value="19">Yamanashi (Japan)</option>
                  <option value="20">Nagano (Japan)</option>
                  <option value="21">Gifu (Japan)</option>
                  <option value="22">Shizuoka (Japan)</option>
                  <option value="23">Aichi (Japan)</option>
                  <option value="24">Mie (Japan)</option>
                  <option value="25">Shiga (Japan)</option>
                  <option value="26">Kyoto (Japan)</option>
                  <option value="27">Osaka (Japan)</option>
                  <option value="28">Hyogo (Japan)</option>
                  <option value="29">Nara (Japan)</option>
                  <option value="30">Wakayama (Japan)</option>
                  <option value="31">Tottori (Japan)</option>
                  <option value="32">Shimane (Japan)</option>
                  <option value="33">Okayama (Japan)</option>
                  <option value="34">Hiroshima (Japan)</option>
                  <option value="35">Yamaguchi (Japan)</option>
                  <option value="36">Tokushima (Japan)</option>
                  <option value="37">Kagawa (Japan)</option>
                  <option value="38">Ehime (Japan)</option>
                  <option value="39">Kochi (Japan)</option>
                  <option value="40">Fukuoka (Japan)</option>
                  <option value="41">Saga (Japan)</option>
                  <option value="42">Nagasaki (Japan)</option>
                  <option value="43">Kumamoto (Japan)</option>
                  <option value="44">Oita (Japan)</option>
                  <option value="45">Miyazaki (Japan)</option>
                  <option value="46">Kagoshima (Japan)</option>
                  <option value="47">Okinawa (Japan)</option>
                  <option value="48">Hong Kong</option>
                  <option value="49">Korea</option>
                  <option value="50">Taiwan</option>
                  <option value="51">USA</option>
                  <option value="52">Europe</option>
                  <option value="53">Overseas</option>
                  <option value="54">Alaska</option>
                  <option value="55">Alabama</option>
                  <option value="56">Arkansas</option>
                  <option value="57">Arizona</option>
                  <option value="58">California</option>
                  <option value="59">Colorado</option>
                  <option value="60">Connecticut</option>
                  <option value="61">Delaware</option>
                  <option value="62">Florida</option>
                  <option value="63">Georgia</option>
                  <option value="64">Hawaii</option>
                  <option value="65">Iowa</option>
                  <option value="66">Idaho</option>
                  <option value="67">Illinois</option>
                  <option value="68">Indiana</option>
                  <option value="69">Kansas</option>
                  <option value="70">Kentucky</option>
                  <option value="71">Louisiana</option>
                  <option value="72">Massachusetts</option>
                  <option value="73">Maryland</option>
                  <option value="74">Maine</option>
                  <option value="75">Michigan</option>
                  <option value="76">Minnesota</option>
                  <option value="77">Missouri</option>
                  <option value="78">Mississippi</option>
                  <option value="79">Montana</option>
                  <option value="80">Nebraska</option>
                  <option value="81">North Carolina</option>
                  <option value="82">North Dakota</option>
                  <option value="83">New Hampshire</option>
                  <option value="84">New Jersey</option>
                  <option value="85">New Mexico</option>
                  <option value="86">Nevada</option>
                  <option value="87">New York</option>
                  <option value="88">Ohio</option>
                  <option value="89">Oklahoma</option>
                  <option value="90">Oregon</option>
                  <option value="91">Pennsylvania</option>
                  <option value="92">Rhode Island</option>
                  <option value="93">South Carolina</option>
                  <option value="94">South Dakota</option>
                  <option value="95">Tennessee</option>
                  <option value="96">Texas</option>
                  <option value="97">Utah</option>
                  <option value="98">Virginia</option>
                  <option value="99">Vermont</option>
                  <option value="100">Washington</option>
                  <option value="101">Wisconsin</option>
                  <option value="102">West Virginia</option>
                  <option value="103">Wyoming</option>
                  <option value="104">Washington D.C.</option>
                  <option value="105">Japan</option>
                  <option value="106">Canada</option>
                  <option value="107">Singapore</option>
                  <option value="108">Thailand</option>
                  <option value="109">Australia</option>
                  <option value="110">New Zealand</option>
                  <option value="111">United Kingdom</option>
                  <option value="112">Italy</option>
                  <option value="113">Spain</option>
                  <option value="114">Germany</option>
                  <option value="115">France</option>
                  <option value="116">Portugal</option>
                  <option value="117">Indonesia</option>
                  <option value="118">Philippines</option>
                </select>
                <!--v-if-->
              </div>
            </div>
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-5" data-slot="label" class="block font-medium text-default">DDR Code</label>
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
              <div class="relative mt-1">
                <div data-slot="root" class="relative inline-flex items-center w-full"><input id="v-0-0-5" type="number" name="ddrCode" placeholder="00000000" class="w-full rounded-md border-0 appearance-none placeholder:text-dimmed disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 text-highlighted bg-default ring ring-inset ring-accented outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary md:text-sm" autocomplete="off" aria-invalid="false" data-slot="base" value="10000000">
                  <!--v-if-->
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
            </div>
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-6" data-slot="label" class="block font-medium text-default">Profile Visibility</label>
                  <!--v-if-->
                </div>
                <p id="v-0-0-6-description" data-slot="description" class="text-muted">Allow other users to view your profile and scores.</p>
              </div>
              <div class="relative mt-1">
                <div data-slot="root" class="relative flex items-start w-full">
                  <div data-slot="container" class="flex items-center h-5"><button id="v-0-0-6" role="switch" type="button" aria-checked="true" aria-required="false" data-state="checked" aria-invalid="false" aria-describedby="v-0-0-6-description" data-slot="base" class="inline-flex items-center shrink-0 rounded-full border-2 border-transparent focus-visible:outline-3 data-[state=unchecked]:bg-accented transition-[background] duration-200 ease-out data-[state=checked]:bg-primary outline-primary/25 w-9" value="on"><span data-state="checked" data-slot="thumb" class="group pointer-events-none rounded-full bg-default shadow-lg ring-0 transition-transform duration-200 ease-out motion-reduce:transition-none data-[state=unchecked]:translate-x-0 data-[state=unchecked]:rtl:-translate-x-0 flex items-center justify-center size-4 data-[state=checked]:translate-x-4 data-[state=checked]:rtl:-translate-x-4"></span></button><!-- We render single input if it's required --><input aria-hidden="true" data-hidden="" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" name="isPublic" checked="" type="checkbox" value="on"></div>
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
            </div><button type="submit" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary outline-primary/25 focus-visible:outline-3">
              <!--v-if-->Save
              <!--v-if-->
            </button>
          </form>
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`/profile > (locale: ja) > renders alert when user is not registered yet 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-warning text-inverted mt-2"><span class="iconify i-lucide:user shrink-0 size-5" aria-hidden="true" data-slot="icon"></span>
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">新規登録</div>
    <div data-slot="description" class="text-sm opacity-90 mt-1">アプリの利用には追加のユーザー情報の登録が必要です。下記のフォームに必要事項を入力してください。</div>
    <!--v-if-->
  </div>
  <div data-slot="actions" class="flex flex-wrap gap-1.5 shrink-0 items-center">
    <!--v-if--><button type="button" data-slot="close" aria-label="Close" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted outline-inverted/25 focus-visible:outline-3 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
</div>"
`;

exports[`/profile > (locale: ja) > renders correctly when user is already registered 1`] = `
"<div data-slot="root" class="flex flex-col lg:grid lg:grid-cols-10 lg:gap-10">
  <!--v-if-->
  <div data-slot="center" class="lg:col-span-10">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8">
      <!--v-if-->
      <div data-slot="root" class="rounded-lg overflow-hidden bg-default ring ring-default divide-y divide-default mt-4">
        <!--v-if-->
        <div data-slot="body" class="p-4 sm:p-6">
          <form id="v-0-0-0" method="post" class="" role="form">
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4" disabled="true">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-1" data-slot="label" class="block font-medium text-default after:content-['*'] after:ms-0.5 after:text-error">ユーザーID</label>
                  <!--v-if-->
                </div>
                <p id="v-0-0-1-description" data-slot="description" class="text-muted">このアプリで使用するユーザーIDです。一度登録すると変更できません。</p>
              </div>
              <div class="relative mt-1">
                <div data-slot="root" class="relative inline-flex items-center w-full"><input id="v-0-0-1" type="text" name="id" placeholder="3-32文字, 半角英数字,アンダースコア,ハイフンのみ使用可能" class="w-full rounded-md border-0 appearance-none placeholder:text-dimmed disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 text-highlighted bg-default ring ring-inset ring-accented outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary md:text-sm" disabled="" autocomplete="off" aria-invalid="false" aria-describedby="v-0-0-1-description" data-slot="base" value="public_user">
                  <!--v-if-->
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
            </div>
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-2" data-slot="label" class="block font-medium text-default after:content-['*'] after:ms-0.5 after:text-error">ユーザー名</label>
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
              <div class="relative mt-1">
                <div data-slot="root" class="relative inline-flex items-center w-full"><input id="v-0-0-2" type="text" name="name" placeholder="1-32文字" class="w-full rounded-md border-0 appearance-none placeholder:text-dimmed disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 text-highlighted bg-default ring ring-inset ring-accented outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary md:text-sm" autocomplete="off" aria-invalid="false" data-slot="base" value="Public User">
                  <!--v-if-->
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
            </div>
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-3" data-slot="label" class="block font-medium text-default after:content-['*'] after:ms-0.5 after:text-error">所属エリア</label>
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
              <div class="relative mt-1"><button id="v-0-0-3" data-slot="base" class="relative group rounded-md inline-flex items-center disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-highlighted bg-default ring ring-inset ring-accented hover:bg-elevated disabled:bg-default outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary pe-9 md:text-sm w-full" aria-invalid="false" role="combobox" type="button" aria-controls="reka-select-content-v-0-0-4" aria-expanded="false" aria-required="false" aria-autocomplete="none" dir="ltr" data-state="closed">
                  <!--v-if--><span style="pointer-events: none;" data-slot="value" class="truncate pointer-events-none">東京都</span><span data-slot="trailing" class="absolute inset-y-0 end-0 flex items-center pe-2.5"><span class="iconify i-lucide:chevron-down shrink-0 text-dimmed size-5" aria-hidden="true" data-slot="trailingIcon"></span></span>
                </button>
                <!--teleport start-->
                <!--teleport end--><select aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" name="area" value="13">
                  <!--v-if-->
                  <option value="0">未設定</option>
                  <option value="1">北海道</option>
                  <option value="2">青森県</option>
                  <option value="3">岩手県</option>
                  <option value="4">宮城県</option>
                  <option value="5">秋田県</option>
                  <option value="6">山形県</option>
                  <option value="7">福島県</option>
                  <option value="8">茨城県</option>
                  <option value="9">栃木県</option>
                  <option value="10">群馬県</option>
                  <option value="11">埼玉県</option>
                  <option value="12">千葉県</option>
                  <option value="13">東京都</option>
                  <option value="14">神奈川県</option>
                  <option value="15">新潟県</option>
                  <option value="16">富山県</option>
                  <option value="17">石川県</option>
                  <option value="18">福井県</option>
                  <option value="19">山梨県</option>
                  <option value="20">長野県</option>
                  <option value="21">岐阜県</option>
                  <option value="22">静岡県</option>
                  <option value="23">愛知県</option>
                  <option value="24">三重県</option>
                  <option value="25">滋賀県</option>
                  <option value="26">京都府</option>
                  <option value="27">大阪府</option>
                  <option value="28">兵庫県</option>
                  <option value="29">奈良県</option>
                  <option value="30">和歌山県</option>
                  <option value="31">鳥取県</option>
                  <option value="32">島根県</option>
                  <option value="33">岡山県</option>
                  <option value="34">広島県</option>
                  <option value="35">山口県</option>
                  <option value="36">徳島県</option>
                  <option value="37">香川県</option>
                  <option value="38">愛媛県</option>
                  <option value="39">高知県</option>
                  <option value="40">福岡県</option>
                  <option value="41">佐賀県</option>
                  <option value="42">長崎県</option>
                  <option value="43">熊本県</option>
                  <option value="44">大分県</option>
                  <option value="45">宮崎県</option>
                  <option value="46">鹿児島県</option>
                  <option value="47">沖縄県</option>
                  <option value="48">香港</option>
                  <option value="49">韓国</option>
                  <option value="50">台湾</option>
                  <option value="51">アメリカ合衆国</option>
                  <option value="52">ヨーロッパ</option>
                  <option value="53">海外</option>
                  <option value="54">アラスカ州 (アメリカ)</option>
                  <option value="55">アラバマ州 (アメリカ)</option>
                  <option value="56">アーカンソー州 (アメリカ)</option>
                  <option value="57">アリゾナ州 (アメリカ)</option>
                  <option value="58">カリフォルニア州 (アメリカ)</option>
                  <option value="59">コロラド州 (アメリカ)</option>
                  <option value="60">コネチカット州 (アメリカ)</option>
                  <option value="61">デラウェア州 (アメリカ)</option>
                  <option value="62">フロリダ州 (アメリカ)</option>
                  <option value="63">ジョージア州 (アメリカ)</option>
                  <option value="64">ハワイ州 (アメリカ)</option>
                  <option value="65">アイオワ州 (アメリカ)</option>
                  <option value="66">アイダホ州 (アメリカ)</option>
                  <option value="67">イリノイ州 (アメリカ)</option>
                  <option value="68">インディアナ州 (アメリカ)</option>
                  <option value="69">カンザス州 (アメリカ)</option>
                  <option value="70">ケンタッキー州 (アメリカ)</option>
                  <option value="71">ルイジアナ州 (アメリカ)</option>
                  <option value="72">マサチューセッツ州 (アメリカ)</option>
                  <option value="73">メリーランド州 (アメリカ)</option>
                  <option value="74">メイン州 (アメリカ)</option>
                  <option value="75">ミシガン州 (アメリカ)</option>
                  <option value="76">ミネソタ州 (アメリカ)</option>
                  <option value="77">ミズーリ州 (アメリカ)</option>
                  <option value="78">ミシシッピ州 (アメリカ)</option>
                  <option value="79">モンタナ州 (アメリカ)</option>
                  <option value="80">ネブラスカ州 (アメリカ)</option>
                  <option value="81">ノースカロライナ州 (アメリカ)</option>
                  <option value="82">ノースダコタ州 (アメリカ)</option>
                  <option value="83">ニューハンプシャー州 (アメリカ)</option>
                  <option value="84">ニュージャージー州 (アメリカ)</option>
                  <option value="85">ニューメキシコ州 (アメリカ)</option>
                  <option value="86">ネバダ州 (アメリカ)</option>
                  <option value="87">ニューヨーク州 (アメリカ)</option>
                  <option value="88">オハイオ州 (アメリカ)</option>
                  <option value="89">オクラホマ州 (アメリカ)</option>
                  <option value="90">オレゴン州 (アメリカ)</option>
                  <option value="91">ペンシルベニア州 (アメリカ)</option>
                  <option value="92">ロードアイランド州 (アメリカ)</option>
                  <option value="93">サウスカロライナ州 (アメリカ)</option>
                  <option value="94">サウスダコタ州 (アメリカ)</option>
                  <option value="95">テネシー州 (アメリカ)</option>
                  <option value="96">テキサス州 (アメリカ)</option>
                  <option value="97">ユタ州 (アメリカ)</option>
                  <option value="98">バージニア州 (アメリカ)</option>
                  <option value="99">バーモント州 (アメリカ)</option>
                  <option value="100">ワシントン州 (アメリカ)</option>
                  <option value="101">ウィスコンシン州 (アメリカ)</option>
                  <option value="102">ウェストバージニア州 (アメリカ)</option>
                  <option value="103">ワイオミング州 (アメリカ)</option>
                  <option value="104">ワシントンD.C. (アメリカ)</option>
                  <option value="105">日本</option>
                  <option value="106">カナダ</option>
                  <option value="107">シンガポール</option>
                  <option value="108">タイ</option>
                  <option value="109">オーストラリア</option>
                  <option value="110">ニュージーランド</option>
                  <option value="111">イギリス</option>
                  <option value="112">イタリア</option>
                  <option value="113">スペイン</option>
                  <option value="114">ドイツ</option>
                  <option value="115">フランス</option>
                  <option value="116">ポルトガル</option>
                  <option value="117">インドネシア</option>
                  <option value="118">フィリピン</option>
                </select>
                <!--v-if-->
              </div>
            </div>
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-5" data-slot="label" class="block font-medium text-default">DDRコード</label>
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
              <div class="relative mt-1">
                <div data-slot="root" class="relative inline-flex items-center w-full"><input id="v-0-0-5" type="number" name="ddrCode" placeholder="00000000" class="w-full rounded-md border-0 appearance-none placeholder:text-dimmed disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 text-highlighted bg-default ring ring-inset ring-accented outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary md:text-sm" autocomplete="off" aria-invalid="false" data-slot="base" value="10000000">
                  <!--v-if-->
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
            </div>
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-6" data-slot="label" class="block font-medium text-default">プロフィール公開設定</label>
                  <!--v-if-->
                </div>
                <p id="v-0-0-6-description" data-slot="description" class="text-muted">他のユーザーがあなたのプロフィール・スコアを閲覧できるようにします。</p>
              </div>
              <div class="relative mt-1">
                <div data-slot="root" class="relative flex items-start w-full">
                  <div data-slot="container" class="flex items-center h-5"><button id="v-0-0-6" role="switch" type="button" aria-checked="true" aria-required="false" data-state="checked" aria-invalid="false" aria-describedby="v-0-0-6-description" data-slot="base" class="inline-flex items-center shrink-0 rounded-full border-2 border-transparent focus-visible:outline-3 data-[state=unchecked]:bg-accented transition-[background] duration-200 ease-out data-[state=checked]:bg-primary outline-primary/25 w-9" value="on"><span data-state="checked" data-slot="thumb" class="group pointer-events-none rounded-full bg-default shadow-lg ring-0 transition-transform duration-200 ease-out motion-reduce:transition-none data-[state=unchecked]:translate-x-0 data-[state=unchecked]:rtl:-translate-x-0 flex items-center justify-center size-4 data-[state=checked]:translate-x-4 data-[state=checked]:rtl:-translate-x-4"></span></button><!-- We render single input if it's required --><input aria-hidden="true" data-hidden="" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" name="isPublic" checked="" type="checkbox" value="on"></div>
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
            </div><button type="submit" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary outline-primary/25 focus-visible:outline-3">
              <!--v-if-->保存
              <!--v-if-->
            </button>
          </form>
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`/profile > (locale: ko) > renders alert when user is not registered yet 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-warning text-inverted mt-2"><span class="iconify i-lucide:user shrink-0 size-5" aria-hidden="true" data-slot="icon"></span>
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">신규 등록</div>
    <div data-slot="description" class="text-sm opacity-90 mt-1">서비스 이용을 위해 추가 사용자 정보 등록이 필요합니다. 아래 양식에 필수 항목을 입력해 주세요.</div>
    <!--v-if-->
  </div>
  <div data-slot="actions" class="flex flex-wrap gap-1.5 shrink-0 items-center">
    <!--v-if--><button type="button" data-slot="close" aria-label="Close" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted outline-inverted/25 focus-visible:outline-3 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
</div>"
`;

exports[`/profile > (locale: ko) > renders correctly when user is already registered 1`] = `
"<div data-slot="root" class="flex flex-col lg:grid lg:grid-cols-10 lg:gap-10">
  <!--v-if-->
  <div data-slot="center" class="lg:col-span-10">
    <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8">
      <!--v-if-->
      <div data-slot="root" class="rounded-lg overflow-hidden bg-default ring ring-default divide-y divide-default mt-4">
        <!--v-if-->
        <div data-slot="body" class="p-4 sm:p-6">
          <form id="v-0-0-0" method="post" class="" role="form">
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4" disabled="true">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-1" data-slot="label" class="block font-medium text-default after:content-['*'] after:ms-0.5 after:text-error">사용자 ID</label>
                  <!--v-if-->
                </div>
                <p id="v-0-0-1-description" data-slot="description" class="text-muted">이 앱에서 사용되는 사용자 ID입니다. 등록 후에는 변경할 수 없습니다.</p>
              </div>
              <div class="relative mt-1">
                <div data-slot="root" class="relative inline-flex items-center w-full"><input id="v-0-0-1" type="text" name="id" placeholder="3-32자, 영숫자, 밑줄 및 하이픈만 사용 가능" class="w-full rounded-md border-0 appearance-none placeholder:text-dimmed disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 text-highlighted bg-default ring ring-inset ring-accented outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary md:text-sm" disabled="" autocomplete="off" aria-invalid="false" aria-describedby="v-0-0-1-description" data-slot="base" value="public_user">
                  <!--v-if-->
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
            </div>
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-2" data-slot="label" class="block font-medium text-default after:content-['*'] after:ms-0.5 after:text-error">사용자 이름</label>
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
              <div class="relative mt-1">
                <div data-slot="root" class="relative inline-flex items-center w-full"><input id="v-0-0-2" type="text" name="name" placeholder="1-32자" class="w-full rounded-md border-0 appearance-none placeholder:text-dimmed disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 text-highlighted bg-default ring ring-inset ring-accented outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary md:text-sm" autocomplete="off" aria-invalid="false" data-slot="base" value="Public User">
                  <!--v-if-->
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
            </div>
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-3" data-slot="label" class="block font-medium text-default after:content-['*'] after:ms-0.5 after:text-error">소속 지역</label>
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
              <div class="relative mt-1"><button id="v-0-0-3" data-slot="base" class="relative group rounded-md inline-flex items-center disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-highlighted bg-default ring ring-inset ring-accented hover:bg-elevated disabled:bg-default outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary pe-9 md:text-sm w-full" aria-invalid="false" role="combobox" type="button" aria-controls="reka-select-content-v-0-0-4" aria-expanded="false" aria-required="false" aria-autocomplete="none" dir="ltr" data-state="closed">
                  <!--v-if--><span style="pointer-events: none;" data-slot="value" class="truncate pointer-events-none">도쿄 (일본)</span><span data-slot="trailing" class="absolute inset-y-0 end-0 flex items-center pe-2.5"><span class="iconify i-lucide:chevron-down shrink-0 text-dimmed size-5" aria-hidden="true" data-slot="trailingIcon"></span></span>
                </button>
                <!--teleport start-->
                <!--teleport end--><select aria-hidden="true" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" name="area" value="13">
                  <!--v-if-->
                  <option value="0">미설정</option>
                  <option value="1">홋카이도 (일본)</option>
                  <option value="2">아오모리 (일본)</option>
                  <option value="3">이와테 (일본)</option>
                  <option value="4">미야기 (일본)</option>
                  <option value="5">아키타 (일본)</option>
                  <option value="6">야마가타 (일본)</option>
                  <option value="7">후쿠시마 (일본)</option>
                  <option value="8">이바라키 (일본)</option>
                  <option value="9">토치기 (일본)</option>
                  <option value="10">군마 (일본)</option>
                  <option value="11">사이타마 (일본)</option>
                  <option value="12">치바 (일본)</option>
                  <option value="13">도쿄 (일본)</option>
                  <option value="14">카나가와 (일본)</option>
                  <option value="15">니이가타 (일본)</option>
                  <option value="16">토야마 (일본)</option>
                  <option value="17">이시카와 (일본)</option>
                  <option value="18">후쿠이 (일본)</option>
                  <option value="19">야마나시 (일본)</option>
                  <option value="20">나가노 (일본)</option>
                  <option value="21">기후 (일본)</option>
                  <option value="22">시즈오카 (일본)</option>
                  <option value="23">아이치 (일본)</option>
                  <option value="24">미에 (일본)</option>
                  <option value="25">시가 (일본)</option>
                  <option value="26">교토 (일본)</option>
                  <option value="27">오사카 (일본)</option>
                  <option value="28">효고 (일본)</option>
                  <option value="29">나라 (일본)</option>
                  <option value="30">와카야마 (일본)</option>
                  <option value="31">돗토리 (일본)</option>
                  <option value="32">시마네 (일본)</option>
                  <option value="33">오카야마 (일본)</option>
                  <option value="34">히로시마 (일본)</option>
                  <option value="35">야마구치 (일본)</option>
                  <option value="36">도쿠시마 (일본)</option>
                  <option value="37">카가와 (일본)</option>
                  <option value="38">에히메 (일본)</option>
                  <option value="39">코치 (일본)</option>
                  <option value="40">후쿠오카 (일본)</option>
                  <option value="41">사가 (일본)</option>
                  <option value="42">나가사키 (일본)</option>
                  <option value="43">쿠마모토 (일본)</option>
                  <option value="44">오이타 (일본)</option>
                  <option value="45">미야자키 (일본)</option>
                  <option value="46">카고시마 (일본)</option>
                  <option value="47">오키나와 (일본)</option>
                  <option value="48">홍콩</option>
                  <option value="49">한국</option>
                  <option value="50">대만</option>
                  <option value="51">미국</option>
                  <option value="52">유럽</option>
                  <option value="53">해외</option>
                  <option value="54">알래스카 (미국)</option>
                  <option value="55">앨라배마 (미국)</option>
                  <option value="56">아칸소 (미국)</option>
                  <option value="57">애리조나 (미국)</option>
                  <option value="58">캘리포니아 (미국)</option>
                  <option value="59">콜로라도 (미국)</option>
                  <option value="60">커네티컷 (미국)</option>
                  <option value="61">델라웨어 (미국)</option>
                  <option value="62">플로리다 (미국)</option>
                  <option value="63">조지아 (미국)</option>
                  <option value="64">하와이 (미국)</option>
                  <option value="65">아이오와 (미국)</option>
                  <option value="66">아이다호 (미국)</option>
                  <option value="67">일리노이 (미국)</option>
                  <option value="68">인디애나 (미국)</option>
                  <option value="69">캔자스 (미국)</option>
                  <option value="70">켄터키 (미국)</option>
                  <option value="71">루이지애나 (미국)</option>
                  <option value="72">매사추세츠 (미국)</option>
                  <option value="73">메릴랜드 (미국)</option>
                  <option value="74">메인 (미국)</option>
                  <option value="75">미시간 (미국)</option>
                  <option value="76">미네소타 (미국)</option>
                  <option value="77">미주리 (미국)</option>
                  <option value="78">미시시피 (미국)</option>
                  <option value="79">몬태나 (미국)</option>
                  <option value="80">네브래스카 (미국)</option>
                  <option value="81">노스캐롤라이나 (미국)</option>
                  <option value="82">노스다코타 (미국)</option>
                  <option value="83">뉴햄프셔 (미국)</option>
                  <option value="84">뉴저지 (미국)</option>
                  <option value="85">뉴멕시코 (미국)</option>
                  <option value="86">네바다 (미국)</option>
                  <option value="87">뉴욕 (미국)</option>
                  <option value="88">오하이오 (미국)</option>
                  <option value="89">오클라호마 (미국)</option>
                  <option value="90">오리건 (미국)</option>
                  <option value="91">펜실베이니아 (미국)</option>
                  <option value="92">로드아일랜드 (미국)</option>
                  <option value="93">사우스캐롤라이나 (미국)</option>
                  <option value="94">사우스다코타 (미국)</option>
                  <option value="95">테네시 (미국)</option>
                  <option value="96">텍사스 (미국)</option>
                  <option value="97">유타 (미국)</option>
                  <option value="98">버지니아 (미국)</option>
                  <option value="99">버몬트 (미국)</option>
                  <option value="100">워싱턴 (미국)</option>
                  <option value="101">위스콘신 (미국)</option>
                  <option value="102">웨스트버지니아 (미국)</option>
                  <option value="103">와이오밍 (미국)</option>
                  <option value="104">워싱턴 D.C. (미국)</option>
                  <option value="105">일본</option>
                  <option value="106">캐나다</option>
                  <option value="107">싱가포르</option>
                  <option value="108">태국</option>
                  <option value="109">호주</option>
                  <option value="110">뉴질랜드</option>
                  <option value="111">영국</option>
                  <option value="112">이탈리아</option>
                  <option value="113">스페인</option>
                  <option value="114">독일</option>
                  <option value="115">프랑스</option>
                  <option value="116">포르투갈</option>
                  <option value="117">인도네시아</option>
                  <option value="118">필리핀</option>
                </select>
                <!--v-if-->
              </div>
            </div>
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-5" data-slot="label" class="block font-medium text-default">DDR Code</label>
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
              <div class="relative mt-1">
                <div data-slot="root" class="relative inline-flex items-center w-full"><input id="v-0-0-5" type="number" name="ddrCode" placeholder="00000000" class="w-full rounded-md border-0 appearance-none placeholder:text-dimmed disabled:cursor-not-allowed disabled:opacity-75 transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 text-highlighted bg-default ring ring-inset ring-accented outline-primary/25 focus-visible:outline-3 focus-visible:ring-primary md:text-sm" autocomplete="off" aria-invalid="false" data-slot="base" value="10000000">
                  <!--v-if-->
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
            </div>
            <div data-orientation="vertical" data-slot="root" class="text-sm mt-4 mb-4">
              <div data-slot="wrapper" class="">
                <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0-6" data-slot="label" class="block font-medium text-default">프로필 공개 설정</label>
                  <!--v-if-->
                </div>
                <p id="v-0-0-6-description" data-slot="description" class="text-muted">다른 사용자가 귀하의 프로필과 스코어를 볼 수 있도록 허용합니다.</p>
              </div>
              <div class="relative mt-1">
                <div data-slot="root" class="relative flex items-start w-full">
                  <div data-slot="container" class="flex items-center h-5"><button id="v-0-0-6" role="switch" type="button" aria-checked="true" aria-required="false" data-state="checked" aria-invalid="false" aria-describedby="v-0-0-6-description" data-slot="base" class="inline-flex items-center shrink-0 rounded-full border-2 border-transparent focus-visible:outline-3 data-[state=unchecked]:bg-accented transition-[background] duration-200 ease-out data-[state=checked]:bg-primary outline-primary/25 w-9" value="on"><span data-state="checked" data-slot="thumb" class="group pointer-events-none rounded-full bg-default shadow-lg ring-0 transition-transform duration-200 ease-out motion-reduce:transition-none data-[state=unchecked]:translate-x-0 data-[state=unchecked]:rtl:-translate-x-0 flex items-center justify-center size-4 data-[state=checked]:translate-x-4 data-[state=checked]:rtl:-translate-x-4"></span></button><!-- We render single input if it's required --><input aria-hidden="true" data-hidden="" tabindex="-1" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;" name="isPublic" checked="" type="checkbox" value="on"></div>
                  <!--v-if-->
                </div>
                <!--v-if-->
              </div>
            </div><button type="submit" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary outline-primary/25 focus-visible:outline-3">
              <!--v-if-->저장
              <!--v-if-->
            </button>
          </form>
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;
